crates/jekko-tui/tests/snapshots/inline_snapshots__question_chip_with_choices.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
assertion_line: 158
expression: out
---
│ question Continue? · session_1 · question_1 [yes] [no] [later]
