crates/jekko-tui/tests/snapshots/inline_snapshots__reasoning_card_italic.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
│ thinking about edge cases…
