crates/jekko-tui/tests/snapshots/inline_snapshots__session_header.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
⚡  JEKKO v0.1.0 · ~/code/jekko · branch: main
