crates/jekko-tui/tests/snapshots/inline_snapshots__session_started_notice.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
assertion_line: 126
expression: out
---
│ info session started: session_1 · hello
