crates/jekko-tui/tests/snapshots/inline_snapshots__slash_popup_cursor_at_third.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
 / commands  (5/5)
   /help       show keyboard shortcuts and available commands
   /new        start a new session (pushes a divider into scrollback)
 › /clear      push a divider into scrollback
────────────────────────────────────────────────────────────────────────────────
› /
────────────────────────────────────────────────────────────────────────────────
 ↑/↓ select  ⏎ run  ⇥ complete  Esc close
