crates/jekko-tui/tests/snapshots/inline_snapshots__slash_popup_filtered_to_help.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
 / commands  (1/5)
 › /help       show keyboard shortcuts and available commands


────────────────────────────────────────────────────────────────────────────────
› /he
────────────────────────────────────────────────────────────────────────────────
 ↑/↓ select  ⏎ run  ⇥ complete  Esc close
