crates/jekko-tui/tests/snapshots/inline_snapshots__slash_popup_no_matches.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
 / commands  (0/5)
   (no matches)


────────────────────────────────────────────────────────────────────────────────
› /zzz
────────────────────────────────────────────────────────────────────────────────
 ↑/↓ select  ⏎ run  ⇥ complete  Esc close
