crates/jekko-tui/tests/snapshots/inline_snapshots__system_notice_error.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
│ error gateway unreachable
│       retry in 5s
