crates/jekko-tui/tests/snapshots/inline_snapshots__tool_call_bash_failure_with_collapse.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
● Bash(git status --short)
  └ line 9
    line 10
    line 11
    … +9 lines (ctrl+o to expand)
