crates/jekko-tui/tests/snapshots/inline_snapshots__tool_call_bash_success.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
● Bash(git status --short)
  └ M  src/a.rs
    M  src/b.rs
