crates/jekko-tui/tests/snapshots/inline_snapshots__user_card_multiline.snap
---
source: crates/jekko-tui/tests/inline_snapshots.rs
expression: out
---
│ hello
│ world
│ third line
